@@ -2,6 +2,7 @@ Alpha 4.2
 
 - Job prioritisation - You can click and drag to set different levels of priority for all jobs in the world, and also on items of furniture that produce jobs
 - The crafting management screen also allows you to set a priority on each crafting recipe of disabled, low, normal or high
+- The crafting management screen also allows you to select a material to be used for each recipe input item
 - Updated assets for constructed walls
 - Added a placeholder sprite to be used if any sprites are missing
 
